plugins/org.eclipse.bpel.xpath10/src/org/eclipse/bpel/xpath10/parser/XPath10Parser.java
// $ANTLR 3.0.1 /org.eclipse.bpel.xpath10/src/org/eclipse/bpel/xpath10/parser/XPath10.g 2008-06-23 18:23:26

package org.eclipse.bpel.xpath10.parser;
import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;

import org.antlr.runtime.BitSet;
import org.antlr.runtime.CommonToken;
import org.antlr.runtime.FailedPredicateException;
import org.antlr.runtime.MismatchedSetException;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.ParserRuleReturnScope;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.antlr.runtime.tree.CommonTreeAdaptor;
import org.antlr.runtime.tree.RewriteEarlyExitException;
import org.antlr.runtime.tree.RewriteRuleSubtreeStream;
import org.antlr.runtime.tree.RewriteRuleTokenStream;
import org.antlr.runtime.tree.TreeAdaptor;
import org.eclipse.bpel.xpath10.AdditiveExpr;
import org.eclipse.bpel.xpath10.AllNodeStep;
import org.eclipse.bpel.xpath10.Axis;
import org.eclipse.bpel.xpath10.CommentNodeStep;
import org.eclipse.bpel.xpath10.EqualityExpr;
import org.eclipse.bpel.xpath10.Expr;
import org.eclipse.bpel.xpath10.FilterExpr;
import org.eclipse.bpel.xpath10.FunctionCallExpr;
import org.eclipse.bpel.xpath10.LiteralExpr;
import org.eclipse.bpel.xpath10.LocationPath;
import org.eclipse.bpel.xpath10.LogicalExpr;
import org.eclipse.bpel.xpath10.MultiplicativeExpr;
import org.eclipse.bpel.xpath10.NameStep;
import org.eclipse.bpel.xpath10.NumberExpr;
import org.eclipse.bpel.xpath10.PathExpr;
import org.eclipse.bpel.xpath10.Predicate;
import org.eclipse.bpel.xpath10.ProcessingInstructionNodeStep;
import org.eclipse.bpel.xpath10.RelationalExpr;
import org.eclipse.bpel.xpath10.Step;
import org.eclipse.bpel.xpath10.TextNodeStep;
import org.eclipse.bpel.xpath10.UnaryExpr;
import org.eclipse.bpel.xpath10.UnionExpr;
import org.eclipse.bpel.xpath10.VariableReferenceExpr;

public class XPath10Parser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "OR", "AND", "MOD", "DIV", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "PIPE", "DOT", "DOT2", "AT", "COMMA", "COLON2", "COLON", "SLASH", "SLASH2", "DOLLAR", "PLUS", "MINUS", "EQ", "NE", "LT", "LTE", "GT", "GTE", "STAR", "Args", "IDENTIFIER", "LITERAL", "NUMBER", "WS", "DIGITS", "SINGLE_QUOTE_STRING", "DOUBLE_QUOTE_STRING"
	};
	public static final int DOLLAR=21;
	public static final int LT=26;
	public static final int STAR=30;
	public static final int SLASH2=20;
	public static final int MOD=6;
	public static final int DIGITS=36;
	public static final int GTE=29;
	public static final int NUMBER=34;
	public static final int Args=31;
	public static final int LITERAL=33;
	public static final int MINUS=23;
	public static final int AND=5;
	public static final int EOF=-1;
	public static final int LTE=27;
	public static final int LPAREN=8;
	public static final int LBRACKET=10;
	public static final int AT=15;
	public static final int COLON=18;
	public static final int RPAREN=9;
	public static final int SINGLE_QUOTE_STRING=37;
	public static final int WS=35;
	public static final int SLASH=19;
	public static final int DOUBLE_QUOTE_STRING=38;
	public static final int COMMA=16;
	public static final int IDENTIFIER=32;
	public static final int OR=4;
	public static final int GT=28;
	public static final int PLUS=22;
	public static final int PIPE=12;
	public static final int DOT2=14;
	public static final int EQ=24;
	public static final int DIV=7;
	public static final int RBRACKET=11;
	public static final int DOT=13;
	public static final int COLON2=17;
	public static final int NE=25;

	public XPath10Parser(TokenStream input) {
		super(input);
		this.ruleMemo = new HashMap[33+1];
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return this.adaptor;
	}

	@Override
	public String[] getTokenNames() { return tokenNames; }
	@Override
	public String getGrammarFileName() { return "/org.eclipse.bpel.xpath10/src/org/eclipse/bpel/xpath10/parser/XPath10.g"; }



	boolean isNodeNodeName (String node) {
		return "node".equals(node);
	}
	boolean isTextNodeName (String node) {
		return "text".equals(node);
	}
	boolean isCommentNodeName (String node) {
		return "comment".equals(node);
	}
	boolean isProcessingInstructionNodeName (String node) {
		return "processing-instruction".equals(node);
	}

	static int positionOf (Token token, boolean start) {
		if (token instanceof CommonToken) {
			CommonToken t = (CommonToken)token;
			if (start) {
				return t.getStartIndex();
			}
			return t.getStopIndex();
		}
		return -1;
	}

	static int positionOfIfUnset (Token token, boolean start, int currentValue) {
		if (currentValue < 0) {
			return positionOf(token,start);
		}
		return currentValue;
	}

	@Override
	public void displayRecognitionError(String[] tokenNames, RecognitionException re)
	{
		String msg = getErrorMessage(re, tokenNames);
		// we don't recover
		throw new XPath10Exception(msg,re.getCause(),re.index);
	}



	public static class xpath_return extends ParserRuleReturnScope {
		public Expr result;
		Object tree;
		@Override
		public Object getTree() { return this.tree; }
	};

	// $ANTLR start xpath
	// /org.eclipse.bpel.xpath10/src/org/eclipse/bpel/xpath10/parser/XPath10.g:109:0: xpath returns [Expr result] : e= unionExpr ;
	public final xpath_return xpath() throws RecognitionException {
		xpath_return retval = new xpath_return();
		retval.start = this.input.LT(1);

		Object root_0 = null;

		unionExpr_return e = null;



		try {
			// /org.eclipse.bpel.xpath10/src/org/eclipse/bpel/xpath10/parser/XPath10.g:110:3: (e= unionExpr )
			// /org.eclipse.bpel.xpath10/src/org/eclipse/bpel/xpath10/parser/XPath10.g:110:5: e= unionExpr
			{
				root_0 = this.adaptor.nil();

				pushFollow(FOLLOW_unionExpr_in_xpath742);
				e=unionExpr();
				this._fsp--;
				if (this.failed) return retval;
				if ( this.backtracking==0 ) this.adaptor.addChild(root_0, e.getTree());
				if ( this.backtracking==0 ) {
					retval.result = e.result;
				}

			}

			retval.stop = this.input.LT(-1);

			if ( this.backtracking==0 ) {
				retval.tree = this.adaptor.rulePostProcessing(root_0);
				this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(this.input,re);
		}
		finally {
		}
		return retval;
	}
	// $ANTLR end xpath

	public static class locationPath_return extends ParserRuleReturnScope {
		public LocationPath result;
		Object tree;
		@Override
		public Object getTree() { return this.tree; }
	};

	// $ANTLR start locationPath
	// /org.eclipse.bpel.xpath10/src/org/eclipse/bpel/xpath10/parser/XPath10.g:114:0: locationPath returns [LocationPath result] : (aloc= absoluteLocationPath | rloc= relativeLocationPath );
	public final locationPath_return locationPath() throws RecognitionException {
		locationPath_return retval = new locationPath_return();
		retval.start = this.input.LT(1);

		Object root_0 = null;

		absoluteLocationPath_return aloc = null;

		relativeLocationPath_return rloc = null;



		try {
			// /org.eclipse.bpel.xpath10/src/org/eclipse/bpel/xpath10/parser/XPath10.g:114:43: (aloc= absoluteLocationPath | rloc= relativeLocationPath )
			int alt1=2;
			int LA1_0 = this.input.LA(1);

			if ( LA1_0>=SLASH && LA1_0<=SLASH2 ) {
				alt1=1;
			}
			else if ( LA1_0>=DOT && LA1_0<=AT||LA1_0==STAR||LA1_0==IDENTIFIER ) {
				alt1=2;
			}
			else {
				if (this.backtracking>0) {this.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("114:0: locationPath returns [LocationPath result] : (aloc= absoluteLocationPath | rloc= relativeLocationPath );", 1, 0, this.input);

				throw nvae;
			}
			switch (alt1) {
			case 1 :
				// /org.eclipse.bpel.xpath10/src/org/eclipse/bpel/xpath10/parser/XPath10.g:115:2: aloc= absoluteLocationPath
			{
				root_0 = this.adaptor.nil();

				pushFollow(FOLLOW_absoluteLocationPath_in_locationPath769);
				aloc=absoluteLocationPath();
				this._fsp--;
				if (this.failed) return retval;
				if ( this.backtracking==0 ) this.adaptor.addChild(root_0, aloc.getTree());
				if ( this.backtracking==0 ) {
					retval.result =aloc.result;
				}

			}
			break;
			case 2 :
				// /org.eclipse.bpel.xpath10/src/org/eclipse/bpel/xpath10/parser/XPath10.g:117:4: rloc= relativeLocationPath
			{
				root_0 = this.adaptor.nil();

				pushFollow(FOLLOW_relativeLocationPath_in_locationPath781);
				rloc=relativeLocationPath();
				this._fsp--;
				if (this.failed) return retval;
				if ( this.backtracking==0 ) this.adaptor.addChild(root_0, rloc.getTree());
				if ( this.backtracking==0 ) {
					retval.result =rloc.result;
				}

			}
			break;

			}
			retval.stop = this.input.LT(-1);

			if ( this.backtracking==0 ) {
				retval.tree = this.adaptor.rulePostProcessing(root_0);
				this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(this.input,re);
		}
		finally {
		}
		return retval;
	}
	// $ANTLR end locationPath

	public static class absoluteLocationPath_return extends ParserRuleReturnScope {
		public LocationPath result;
		Object tree;
		@Override
		public Object getTree() { return this.tree; }
	};

	// $ANTLR start absoluteLocationPath
	// /org.eclipse.bpel.xpath10/src/org/eclipse/bpel/xpath10/parser/XPath10.g:121:0: absoluteLocationPath returns [LocationPath result] : (op= SLASH2 | op= SLASH ) ( ( AT | STAR | IDENTIFIER )=>loc= i_relativeLocationPath | ) ;
	public final absoluteLocationPath_return absoluteLocationPath() throws RecognitionException {
		absoluteLocationPath_return retval = new absoluteLocationPath_return();
		retval.start = this.input.LT(1);

		Object root_0 = null;

		Token op=null;
		i_relativeLocationPath_return loc = null;


		Object op_tree=null;


		Step ans = null;

		try {
			// /org.eclipse.bpel.xpath10/src/org/eclipse/bpel/xpath10/parser/XPath10.g:124:3: ( (op= SLASH2 | op= SLASH ) ( ( AT | STAR | IDENTIFIER )=>loc= i_relativeLocationPath | ) )
			// /org.eclipse.bpel.xpath10/src/org/eclipse/bpel/xpath10/parser/XPath10.g:125:3: (op= SLASH2 | op= SLASH ) ( ( AT | STAR | IDENTIFIER )=>loc= i_relativeLocationPath | )
			{
				root_0 = this.adaptor.nil();

				// /org.eclipse.bpel.xpath10/src/org/eclipse/bpel/xpath10/parser/XPath10.g:125:3: (op= SLASH2 | op= SLASH )
				int alt2=2;
				int LA2_0 = this.input.LA(1);

				if ( LA2_0==SLASH2 ) {
					alt2=1;
				}
				else if ( LA2_0==SLASH ) {
					alt2=2;
				}
				else {
					if (this.backtracking>0) {this.failed=true; return retval;}
					NoViableAltException nvae =
						new NoViableAltException("125:3: (op= SLASH2 | op= SLASH )", 2, 0, this.input);

					throw nvae;
				}
				switch (alt2) {
				case 1 :
					// /org.eclipse.bpel.xpath10/src/org/eclipse/bpel/xpath10/parser/XPath10.g:125:4: op= SLASH2
				{
					op=this.input.LT(1);
					match(this.input,SLASH2,FOLLOW_SLASH2_in_absoluteLocationPath811); if (this.failed) return retval;
					if ( this.backtracking==0 ) {
						op_tree = this.adaptor.create(op);
						root_0 = this.adaptor.becomeRoot(op_tree, root_0);
					}
					if ( this.backtracking==0 ) {

						ans=new AllNodeStep(Axis.DESCENDANT_OR_SELF);
						ans.setPosition(positionOf(op,true),positionOf(op,false));
					}

				}
				break;
				case 2 :
					// /org.eclipse.bpel.xpath10/src/org/eclipse/bpel/xpath10/parser/XPath10.g:127:73: op= SLASH
				{
					op=this.input.LT(1);
					match(this.input,SLASH,FOLLOW_SLASH_in_absoluteLocationPath820); if (this.failed) return retval;
					if ( this.backtracking==0 ) {
						op_tree = this.adaptor.create(op);
						root_0 = this.adaptor.becomeRoot(op_tree, root_0);
					}

				}
				break;

				}

				// /org.eclipse.bpel.xpath10/src/org/eclipse/bpel/xpath10/parser/XPath10.g:129:7: ( ( AT | STAR | IDENTIFIER )=>loc= i_relativeLocationPath | )
				int alt3=2;
				int LA3_0 = this.input.LA(1);

				if ( LA3_0==IDENTIFIER && synpred1()) {
					alt3=1;
				}
				else if ( LA3_0==AT && synpred1()) {
					alt3=1;
				}
				else if ( LA3_0==STAR ) {
					int LA3_3 = this.input.LA(2);

					if ( LA3_3==LBRACKET && synpred1()) {
						alt3=1;
					}
					else if ( LA3_3==SLASH2 ) {
						switch ( this.input.LA(3) ) {
						case IDENTIFIER:
						{
							int LA3_52 = this.input.LA(4);

							if ( synpred1() ) {
								alt3=1;
							}
							else if ( true ) {
								alt3=2;
							}
							else {
								if (this.backtracking>0) {this.failed=true; return retval;}
								NoViableAltException nvae =
									new NoViableAltException("129:7: ( ( AT | STAR | IDENTIFIER )=>loc= i_relativeLocationPath | )", 3, 52, this.input);

								throw nvae;
							}
						}
						break;
						case AT:
						{
							int LA3_53 = this.input.LA(4);

							if ( LA3_53==IDENTIFIER ) {
								int LA3_158 = this.input.LA(5);

								if ( synpred1() ) {
									alt3=1;
								}
								else if ( true ) {
									alt3=2;
								}
								else {
									if (this.backtracking>0) {this.failed=true; return retval;}
									NoViableAltException nvae =
										new NoViableAltException("129:7: ( ( AT | STAR | IDENTIFIER )=>loc= i_relativeLocationPath | )", 3, 158, this.input);

									throw nvae;
								}
							}
							else if ( LA3_53==STAR ) {
								int LA3_159 = this.input.LA(5);

								if ( synpred1() ) {
									alt3=1;
								}
								else if ( true ) {
									alt3=2;
								}
								else {
									if (this.backtracking>0) {this.failed=true; return retval;}
									NoViableAltException nvae =
										new NoViableAltException("129:7: ( ( AT | STAR | IDENTIFIER )=>loc= i_relativeLocationPath | )", 3, 159, this.input);

									throw nvae;
								}
							}
							else {
								if (this.backtracking>0) {this.failed=true; return retval;}
								NoViableAltException nvae =
									new NoViableAltException("129:7: ( ( AT | STAR | IDENTIFIER )=>loc= i_relativeLocationPath | )", 3, 53, this.input);

								throw nvae;
							}
						}
						break;
						case STAR:
						{
							int LA3_54 = this.input.LA(4);

							if ( synpred1() ) {
								alt3=1;
							}
							else if ( true ) {
								alt3=2;
							}
							else {
								if (this.backtracking>0) {this.failed=true; return retval;}
								NoViableAltException nvae =
									new NoViableAltException("129:7: ( ( AT | STAR | IDENTIFIER )=>loc= i_relativeLocationPath | )", 3, 54, this.input);

								throw nvae;
							}
						}
						break;
						case DOT:
						{
							int LA3_55 = this.input.LA(4);

							if ( synpred1() ) {
								alt3=1;
							}
							else if ( true ) {
								alt3=2;
							}
							else {
								if (this.backtracking>0) {this.failed=true; return retval;}
								NoViableAltException nvae =
									new NoViableAltException("129:7: ( ( AT | STAR | IDENTIFIER )=>loc= i_relativeLocationPath | )", 3, 55, this.input);

								throw nvae;
							}
						}
						break;
						case DOT2:
						{
							int LA3_56 = this.input.LA(4);

							if ( synpred1() ) {
								alt3=1;
							}
							else if ( true ) {
								alt3=2;
							}
							else {
								if (this.backtracking>0) {this.failed=true; return retval;}
								NoViableAltException nvae =
									new NoViableAltException("129:7: ( ( AT | STAR | IDENTIFIER )=>loc= i_relativeLocationPath | )", 3, 56, this.input);

								throw nvae;
							}
						}
						break;
						case OR:
						case AND:
						case MOD:
						case DIV:
						case RPAREN:
						case RBRACKET:
						case PIPE:
						case COMMA:
						case PLUS:
						case MINUS:
						case EQ:
						case NE:
						case LT:
						case LTE:
						case GT:
						case GTE:
						{
							alt3=2;
						}
						break;
						default:
							if (this.backtracking>0) {this.failed=true; return retval;}
							NoViableAltException nvae =
								new NoViableAltException("129:7: ( ( AT | STAR | IDENTIFIER )=>loc= i_relativeLocationPath | )", 3, 24, this.input);

							throw nvae;
						}

					}
					else if ( LA3_3==SLASH ) {
						switch ( this.input.LA(3) ) {
						case IDENTIFIER:
						{
							int LA3_73 = this.input.LA(4);

							if ( synpred1() ) {
								alt3=1;
							}
							else if ( true ) {
								alt3=2;
							}
							else {
								if (this.backtracking>0) {this.failed=true; return retval;}
								NoViableAltException nvae =
									new NoViableAltException("129:7: ( ( AT | STAR | IDENTIFIER )=>loc= i_relativeLocationPath | )", 3, 73, this.input);

								throw nvae;
							}
						}
						break;
						case AT:
						{
							int LA3_74 = this.input.LA(4);

							if ( LA3_74==IDENTIFIER ) {
								int LA3_255 = this.input.LA(5);

								if ( synpred1() ) {
									alt3=1;
								}
								else if ( true ) {
									alt3=2;
								}
								else {
									if (this.backtracking>0) {this.failed=true; return retval;}
									NoViableAltException nvae =
